[tool.poetry]
name = "skip-docs"
version = "0.1.4"
description = "Documentation for the Skip static site generator"
authors = ["Harry"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
skip-ssg = "^0.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
